# api_fraym

./: .gitignore  README.md  README_SESSIONS.md  main.py  pyproject.toml  test_chat.json  test_request.json
data/knowledge/: faq.md
data/memory/: user_memory.json
data/memory/audio/: tts_8cd1eab1.aiff
data/ui_components/: components.json  layouts.json
data/vectordb/0298ae28-86be-431a-9a68-ae8193423bdc/: index_metadata.pickle
data/vectordb/80cf4b55-faa2-40ba-a2d3-78e46f9aa83e/: index_metadata.pickle
examples/: nextjs-client.js  simple-client.html
src/intentlayer_aiserver/: __init__.py  main.py
src/intentlayer_aiserver/api/: __init__.py
src/intentlayer_aiserver/api/v1/: __init__.py  memory.py  nlp.py  sessions.py  ui_generator.py
src/intentlayer_aiserver/core/: __init__.py  config.py
src/intentlayer_aiserver/models/: __init__.py  schemas.py
src/intentlayer_aiserver/services/: __init__.py  memory_service.py  nlp_service.py  rag_service.py  session_service.py  tts_service.py  ui_generator.py
static/images/: README.md
